<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_currency">

    <fragment
        android:id="@+id/nav_currency"
        android:name="com.dantol.overseastoolkit.main.currency.ui.CurrencyFragment"
        android:label="@string/menu_currency"
        tools:layout="@layout/currency_fragment" />

    <fragment
        android:id="@+id/nav_timezone"
        android:name="com.dantol.overseastoolkit.main.timezone.TimezoneFragment"
        android:label="@string/menu_timezone"
        tools:layout="@layout/timezone_fragment" />

    <fragment
        android:id="@+id/nav_emergency_info"
        android:name="com.dantol.overseastoolkit.main.emergency.ui.EmergencyInfoFragment"
        android:label="@string/menu_emergency_info"
        tools:layout="@layout/emergency_info_fragment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.dantol.overseastoolkit.main.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />

</navigation>