<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.currency.ui.CurrencyFragment">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Failed to load data"
            tools:visibility="visible" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/from_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:hint="@string/from_currency"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@android:color/darker_gray"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/black"
            app:spinner_popup_elevation="14dp" />

        <EditText
            android:id="@+id/from_currency_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/from_currency"
            app:layout_constraintTop_toBottomOf="@id/from_currency" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/to_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:hint="@string/to_currency"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_currency"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@android:color/darker_gray"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/black"
            app:spinner_popup_elevation="14dp" />

        <TextView
            android:id="@+id/to_currency_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_currency_amount"
            app:layout_constraintStart_toStartOf="@id/to_currency"
            app:layout_constraintTop_toBottomOf="@id/to_currency"
            tools:text="100.0" />

        <ImageView
            android:id="@+id/swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/swap_currencies"
            android:src="@drawable/ic_swap"
            app:layout_constraintBottom_toTopOf="@id/to_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/from_currency"
            app:layout_constraintTop_toBottomOf="@id/from_currency" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>